@@ -26,6 +26,15 @@
 WX_DECLARE_LIST(wxString, wxListString);
 
 // ----------------------------------------------------------------------------
+// wxStatusBar constants
+// ----------------------------------------------------------------------------
+
+// style flags for fields
+#define wxSB_NORMAL    0x0000
+#define wxSB_FLAT      0x0001
+#define wxSB_RAISED    0x0002
+
+// ----------------------------------------------------------------------------
 // wxStatusBar: a window near the bottom of the frame used for status info
 // ----------------------------------------------------------------------------
 
@@ -64,6 +73,15 @@ public:
     // -2 grows twice as much as one with width -1 &c)
     virtual void SetStatusWidths(int n, const int widths[]);
 
+    // field styles
+    // ------------
+
+    // Set the field style. Use either wxSB_NORMAL (default) for a standard 3D 
+    // border around a field, wxSB_FLAT for no border around a field, so that it 
+    // appears flat or wxSB_POPOUT to make the field appear raised.
+    // Setting field styles only works on wxMSW
+    virtual void SetStatusStyles(int n, const int styles[]);
+
     // geometry
     // --------
 
@@ -90,6 +108,11 @@ protected:
     // reset the widths
     void ReinitWidths() { FreeWidths(); InitWidths(); }
 
+    // same, for field styles
+    void InitStyles();
+    void FreeStyles();
+    void ReinitStyles() { FreeStyles(); InitStyles(); }
+
     // same, for text stacks
     void InitStacks();
     void FreeStacks();
@@ -108,6 +131,9 @@ protected:
     // the widths of the fields in pixels if !NULL, all fields have the same
     // width otherwise
     int       *m_statusWidths;
+
+    // the styles of the fields 
+    int       *m_statusStyles;
 
     // stacks of previous values for PushStatusText/PopStatusText
     // this is created on demand, use GetStatusStack/GetOrCreateStatusStack
